# rechrome

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json  rech.spec.ts  rech.ts  serve.ts
.github/workflows/: release.yml
docs/: multitab-report.html  oxmgr-env-leak.md  reload-extension-guide.html
extension/: connect.html  manifest.json  status.html
extension/lib/: background.mjs
extension/lib/ui/: authToken.css  authToken.js  connect.js  status.js
public/: _headers  index.html  setup.ps1  setup.sh
scripts/: refresh-vendor-src.sh  vendor-cli.sh
tray/: Cargo.toml
tray/src/: main.rs
vendor-src/: playwright-cli.js
